Implementing Exceptions Classes for (Theater,Show,Ticket,Movie,Genre,Seat)
Booking does not verify show time (tickets could be booked for past shows). Solved

Cancellation does not verify that the requester is the original ticket holder. Solved

using FlyWay and implementing it
Creating initial schema, seeding data

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,13 +10,16 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
     open-in-view: false
+
+  flyway:
+    enabled: true
 
   cache:
     type: redis
