--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,7 @@ spring:
         format_sql: true
     open-in-view: false
 
+
   flyway:
     enabled: true
 
@@ -57,3 +58,9 @@ springdoc:
     display-request-duration: true
     tags-sorter: alpha
     operations-sorter: method
+
+cors:
+  allowed-origins:
+    - http://localhost:8080
+    - https://your-production-domain.com
+  max-age: 3600
